--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.89.0",
     "sweetalert2": "^11.22.0",
     "uuid": "^11.1.0"
